Monster merge from the integration branch. Still some problems left and JUnits failing.